@@ -1,5 +1,7 @@
 # 0.021
 # [Users] Fetching and displaying correct data from db. Displays data for all users.
+# GET users API ✅
+# [Users] -> [User] Displaying correct data
 
 # 0.020 
 # stable version
